@@ -1157,6 +1157,9 @@ Release 0.18.3 - Unreleased
     HADOOP-4910. NameNode should exclude replicas when choosing excessive
     replicas to delete to avoid data lose. (hairong)
 
+    HADOOP-4983. Fixes a problem in updating Counters in the status reporting.
+    (Amareshwari Sriramadasu via ddas)
+
 Release 0.18.2 - 2008-11-03
 
   BUG FIXES
